--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт-визитка</title>
+    <title>РЎР°Р№С‚-РІРёР·РёС‚РєР°</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Заголовок сайта</h1>
+        <h1>Р—Р°РіРѕР»РѕРІРѕРє СЃР°Р№С‚Р°</h1>
         <nav>
-            <a href="#">Главная</a>
-            <a href="#">О нас</a>
-            <a href="#">Услуги</a>
-            <a href="#">Контакты</a>
+            <a href="#">Р“Р»Р°РІРЅР°СЏ</a>
+            <a href="#">Рћ РЅР°СЃ</a>
+            <a href="#">РЈСЃР»СѓРіРё</a>
+            <a href="#">РљРѕРЅС‚Р°РєС‚С‹</a>
         </nav>
     </header>
     <main>
         <section>
-            <h2>О нас</h2>
+            <h2>Рћ РЅР°СЃ</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, quod, nesciunt, doloremque tempora eius alias ipsam fugiat quisquam deleniti odit quae eaque molestias autem? Doloribus quisquam fugiat quidem quae?</p>
         </section>
         <section>
-            <h2>Услуги</h2>
+            <h2>РЈСЃР»СѓРіРё</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, quod, nesciunt, doloremque tempora eius alias ipsam fugiat quisquam deleniti odit quae eaque molestias autem? Doloribus quisquam fugiat quidem quae?</p>
         </section>
         <section>
-            <h2>Контакты</h2>
+            <h2>РљРѕРЅС‚Р°РєС‚С‹</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, quod, nesciunt, doloremque tempora eius alias ipsam fugiat quisquam deleniti odit quae eaque molestias autem? Doloribus quisquam fugiat quidem quae?</p>
         </section>
     </main>
