--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт-визитка</title>
+    <title>TANail</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Заголовок сайта</h1>
+        <h1>Студия ногтевого сервиса</h1>
         <nav>
             <a href="#">Главная</a>
             <a href="#">О нас</a>
